# rcu-simulator

./: .gitignore  CMakeLists.txt  KeyboardSym.pc.cmakein  LICENSE  README.md  keyboard.h  main.cpp
include/: keyboard.h  routine.h
routines/: NetflixNavigationAndPlay
src/: keyboard.cpp  main.cpp  routine.cpp
utils/: NetflixNavigationAndPlay  instructions  open3rdApps
